solution/duc/language/src/test/resources/error/InvalidAssignmentInIfCond.duc
function cDouble(x) {
  return 2 * x;
}

function main() {
  if (cDouble(2) = 4) {
    42;
  }
}